--- a/rehabweb/templates/base_regular.html
+++ b/rehabweb/templates/base_regular.html
@@ -60,11 +60,13 @@
           <div class="mx-auto d-none d-lg-flex">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'exercises:list' %}"
-                  >Ejercicios</a
-                >
+                <a class="nav-link" href="{% url 'exercises:list' %}">Ejercicios</a> 
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'sesiones:list' %}" >Sesiones</a>
               </li>
             </ul>
+            
           </div>
 
           <!-- Botón logout derecha -->
