--- a/rehabweb/templates/base_regular.html
+++ b/rehabweb/templates/base_regular.html
@@ -65,6 +65,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'sesiones:list' %}" >Sesiones</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'accounts:list' %}" >Usuarios</a>
+              </li>
             </ul>
             
           </div>
