validaciones y mejoras al front

--- a/rehabweb/accounts/templates/accounts/login.html
+++ b/rehabweb/accounts/templates/accounts/login.html
@@ -21,7 +21,7 @@
           <button type="submit" class="btn-primary">Iniciar sesión</button>
         </div>
       </form>
-      <p class="signup-link">¿No tienes cuenta? <a href="{% url 'accounts:signup' %}">Regístrate</a></p>
+      {% comment %} <p class="signup-link">¿No tienes cuenta? <a href="{% url 'accounts:signup' %}">Regístrate</a></p> {% endcomment %}
     </div>
   </section>
 {% endblock %}
