--- a/rehabweb/accounts/templates/accounts/signup.html
+++ b/rehabweb/accounts/templates/accounts/signup.html
@@ -36,9 +36,9 @@
                 <button type="submit" class="btn-primary">Crear cuenta</button>
             </div>
         </form>
-        <p class="signup-link">
+        {% comment %} <p class="signup-link">
             ¿Ya tienes cuenta? <a href="{% url 'accounts:login' %}">Inicia sesión</a>
-        </p>
+        </p> {% endcomment %}
     </div>
 </section>
 {% endblock %}
