--- a/rehabweb/templates/base_regular.html
+++ b/rehabweb/templates/base_regular.html
@@ -134,7 +134,7 @@
       {% if messages %}
       <div
         class="wr-messages"
-        style="position: fixed; top: 72px; left: 0; right: 0; z-index: 1050;"
+        style="margin: 60px 0px;"
       >
         <div class="container">
           {% for m in messages %}
