--- a/rehabweb/accounts/templates/accounts/list.html
+++ b/rehabweb/accounts/templates/accounts/list.html
@@ -78,7 +78,7 @@
   
   <!-- BOTÓN PARA AÑADIR Usuario (debajo de la tabla) -->
   <div class="mt-4 d-flex justify-content-end">
-    <a href="{% url 'accounts:create' %}" class="btn btn-success btn-lg">
+    <a href="{% url 'accounts:signup' %}" class="btn btn-success btn-lg">
       <i class="bi bi-plus-circle"></i> Añadir Usuario
     </a>
   </div>
