--- a/rehabweb/templates/base_regular.html
+++ b/rehabweb/templates/base_regular.html
@@ -91,21 +91,31 @@
 
             <!-- Links -->
             <ul class="navbar-nav mx-auto mb-2 mb-lg-0 text-center">
+              {% if request.session.user.rol != "paciente" %}
+                <li class="nav-item">
+                  <a class="nav-link" href="{% url 'exercises:list' %}">
+                    Ejercicios
+                  </a>
+                </li>
+              {% endif %}
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'exercises:list' %}">
-                  Ejercicios
-                </a>
+                {% if request.session.user.rol == "paciente"%}
+                  <a class="nav-link" href="{% url 'sesiones:list_by_user' request.session.user.id %}">
+                    Sesiones
+                  </a>
+                  {% else %}
+                  <a class="nav-link" href="{% url 'sesiones:list' %}">
+                    Sesiones
+                  </a>
+                {% endif %}
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'sesiones:list' %}">
-                  Sesiones
-                </a>
-              </li>
+              {% if request.session.user.rol != "paciente" %}
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'accounts:list' %}">
                   Usuarios
                 </a>
               </li>
+              {% endif %}
             </ul>
 
             <!-- Botón login / logout -->
